--- a/yyspring-demo/pom.xml
+++ b/yyspring-demo/pom.xml
@@ -3,39 +3,21 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.2.4</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <groupId>cn.youyou</groupId>
+        <artifactId>yyspring</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <groupId>cn.youyou</groupId>
     <artifactId>yyspring-demo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>yyspring-demo</name>
     <description>yyspring-demo</description>
-    <properties>
-        <java.version>22</java.version>
-    </properties>
+
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
+            <groupId>cn.youyou</groupId>
+            <artifactId>yyspring-core</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
 
 </project>
